# bevy_heightmap

./: Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: bezier_curves_1d.wgsl  gpu_readback.wgsl  perlin_noise_2d.wgsl  value_function_readback.wgsl  value_function_shader.wgsl
examples/: basic.rs  export_heightmap.rs  image.rs  value_function.rs  value_function_readback.rs  value_function_shader.rs
src/: asset_loader.rs  compute_shader.rs  gpu_readback.rs  image.rs  lib.rs  mesh_builder.rs
