[package]
edition = "2024"
name = "bevy_heightmap"
version = "0.4.1"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Create meshes from heightmap PNGs in the Bevy game engine."
documentation = "https://docs.rs/bevy_heightmap/latest/bevy_heightmap"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_heightmap"
repository = "https://github.com/Katsutoshii/bevy_heightmap"
keywords = ["bevy"]
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy_math = { version = "0.16", default-features = false }
bevy_image = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_render = { version = "0.16", default-features = false }
bevy_asset = { version = "0.16", default-features = false }
bevy_app = { version = "0.16", default-features = false }
bevy_log = { version = "0.16", default-features = false }
bevy_state = { version = "0.16", default-features = false }

bytemuck = { version = "1.23" }
image = "0.25"
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.16", features = ["file_watcher"] }
bevy-inspector-egui = "0.31"
bevy_egui = { version = "0.34", default-features = false }
bevy_compute_readback = { version = "0.1.1" }


[[example]]
name = "image"

[[example]]
name = "value_function"

[[example]]
name = "value_function_shader"

[[example]]
name = "value_function_readback"

[[example]]
name = "export_heightmap"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
strip = "debuginfo"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false
opt-level = 3
