[package]
edition = "2024"
name = "bevy_heightmap"
version = "0.6.1"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Create meshes from heightmap PNGs in the Bevy game engine."
documentation = "https://docs.rs/bevy_heightmap/latest/bevy_heightmap"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_heightmap"
repository = "https://github.com/Katsutoshii/bevy_heightmap"
keywords = ["bevy"]
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_image",
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "bevy_state",
] }

bytemuck = { version = "1.23" }
image = { version = "0.25", default-features = false }
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.16", features = ["file_watcher"] }
bevy-inspector-egui = "0.31"
bevy_egui = { version = "0.34", default-features = false }
bevy_compute_readback = { version = "0.1.1" }


[[example]]
name = "image"

[[example]]
name = "value_function"

[[example]]
name = "value_function_shader"

[[example]]
name = "export_heightmap"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
strip = "debuginfo"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false
opt-level = 3
