[package]
edition = "2024"
name = "bevy_heightmap"
version = "0.7.0"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Create meshes from heightmap PNGs in the Bevy game engine."
documentation = "https://docs.rs/bevy_heightmap/latest/bevy_heightmap"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_heightmap"
repository = "https://github.com/Katsutoshii/bevy_heightmap"
keywords = ["bevy"]
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_image",
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "bevy_state",
] }

bytemuck = { version = "1.23" }
image = { version = "0.25", default-features = false }
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.18", features = ["file_watcher"] }
bevy-inspector-egui = "0.36"
bevy_egui = { version = "0.39", default-features = false }
# TODO: Uncomment when bevy_compute_readback is updated for Bevy 0.18
# bevy_compute_readback = { version = "0.3" }


[[example]]
name = "image"

[[example]]
name = "value_function"

# TODO: Re-enable when bevy_compute_readback is updated for Bevy 0.18
# [[example]]
# name = "value_function_shader"

[[example]]
name = "export_heightmap"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
strip = "debuginfo"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false
opt-level = 3
